<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.formCekRisiko.FormJantungActivity">
    <!--android:background="@drawable/gradient_background"-->


    <TextView
        android:id="@+id/form_titleJantung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/form_titleJantung"
        android:textColor="#b20a2c"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/form_LinearTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_titleJantung"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="102dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/form_textJantung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/form_textJantung"
                android:textColor="#b20a2c"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/form_dateJantung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_dateJantung"
                android:textColor="#355C7D"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="#DCDCDC" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_LinearTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/form_diabetesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/form_diabetesLabel" />

            <RadioGroup
                android:id="@+id/form_diabetesRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/diabetesYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/diabetesYes" />

                <RadioButton
                    android:id="@+id/DiabetesNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/diabetesNo" />

            </RadioGroup>

            <TextView
                android:id="@+id/form_perokokLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/form_perokokLabel" />


            <RadioGroup
                android:id="@+id/form_perokokRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/perokokYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/perokokYes" />

                <RadioButton
                    android:id="@+id/perokokNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/perokokNo" />

            </RadioGroup>

            <TextView
                android:id="@+id/form_kelaminLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/form_kelaminLabel" />

            <TextView
                android:id="@+id/form_kelaminTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/form_kelaminTextview"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/form_usiaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/form_usiaLabel" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/form_usiaTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:text="@string/form_usiaTextview"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/form_tahunLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/form_tahunLabel"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/form_tensiLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/form_tensiLabel" />

            <EditText
                android:id="@+id/form_tensiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:ems="12"
                android:hint="@string/form_tensiText"
                android:inputType="number"/>

            <TextView
                android:id="@+id/form_kolesterolLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/form_kolesterolLabel"/>

            <Spinner
                android:id="@+id/form_kolesterolSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp" />

            <Button
                android:id="@+id/form_hasilButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:onClick="showAlert"
                android:text="@string/form_hasilButton"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>