<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.formCekRisiko.HasilActivity">

    <TextView
        android:id="@+id/form_titleJantung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/hasil_titleJantung"
        android:textColor="#b20a2c"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/hasil_LinearTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_titleJantung"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="102dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/hasil_textJantung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/form_textJantung"
                android:textColor="#b20a2c"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/form_dateJantung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_dateJantung"
                android:textColor="#355C7D"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="#DCDCDC" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hasil_LinearTingkat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hasil_LinearTitle"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape_circle_green"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hasil_tingkatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42.5dp"
            android:layout_marginTop="50dp"
            android:text="@string/hasil_tingkatLabel"
            android:textColor="#000000"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hasil_tingkatTextview"
            android:text="< 10%"
            android:textStyle="bold"
            android:textSize="50dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/hasil_LinearTingkat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hasil_pesanTextview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:text="@string/hasil_pesanTextview"
            android:textAlignment="center"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/hasil_detailButton"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil_detailButton"/>
    </LinearLayout>


</RelativeLayout>